--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -36,32 +37,7 @@
 
 </head>
 
-<body>	
-	<nav class="navbar-auto-hide navbar-default navbar-fixed-top " role="navigation">
-	  <div class="container-fluid">
-		<!-- Brand and toggle get grouped for better mobile display -->
-		<div class="navbar-header">
-		  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		  </button>
-		  <a class="navbar-brand" href="#">Brand</a>
-		</div>
-
-		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		  <ul class="nav navbar-nav">
-			<li class="active"><a href="index.html">Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="products.html">Products</a></li>
-			<li><a href="workshop.html">Workshops</a></li>
-			<li><a href="contact.html">Contact</a></li>
-		  </ul>
-		</div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
-	</nav>		
+<body>
 	<div class="brand"><img src="img/logo.png" alt="logo">Grape Labs</div>	
     <div class="address-bar">#6, AIISH Layout | Mysore, KA 570026 | 123.456.7890</div>
 
@@ -77,7 +53,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Grape Labs</a>
+                <a class="navbar-brand" href="index.html"><span><img src="img/logosmall.png" alt="logo"> Grape Labs</span></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -280,10 +256,8 @@
 					$('.navbar-auto-hide').fadeOut();
 				}
 			});
-
 		
 		});
-
 	});
 	  }(jQuery));
 	
@@ -292,7 +266,6 @@
 			el.style.borderRadius = el.width / 2 + 'px';
 			});
 		}
-
 		window.onload = imgResize;
 		window.onresize = imgResize;
     </script>
