Added files via upload

--- a/index.html
+++ b/index.html
@@ -91,15 +91,19 @@
                             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+							<li data-target="#carousel-example-generic" data-slide-to="3"></li>
                         </ol>
 
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
-                            <div class="item active">
+							<div class="item active">
+                                <img class="img-responsive img-full" src="img/workshop_promo.png" alt="">
+                            </div>
+                            <div class="item">
                                 <img class="img-responsive img-full" src="img/slide-1.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/board.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/boards.png" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/slide-3.jpg" alt="">
